welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:2: error: method fairV overrides nothing
override def fairV() { 
             ^