welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def fairV() { 
		for(i<-1 to 4){
		avance();
		baisseBrosse();
   }	
}
